--- a/note_cs61b/note_cs61b.tex
+++ b/note_cs61b/note_cs61b.tex
@@ -36,4 +36,7 @@
 	实例化时，可以用接口类型来指向一个继承了接口的子类的对象，但是这个对象只能调用接口中的方法(即override的方法和default的方法)，但不能调用子类中的属性和其他接口中没有的方法。虽然是以接口类型声明，但实例的方法实现均以类中override后的实现为准。这是因为声明接口类型是一个静态类型，而创建一个类的对象时，这个类是动态类型。{\bfseries 编译时系统以静态类型为准，比如输入参数是否与静态类型中方法的参数匹配等。运行时，一个引用类型只能调用静态类型的方法，除非动态类型将这个方法重写了。如果静态类型中没有这个方法，即使动态类型里有，也不能调用。如果有多个overload的方法可以处理一个输入，系统会选择最specific的那个。}
 	
 	一个override和overload的例子。假设接口中有函数default func。如果类继承了接口，并且这个方法的格式与func一样(输入返回参数格式也必须一样)，这时候类就可以重写(override)这个方法的实现；但是如果类中的方法格式与func同名但是输入返回参数格式不同，这时候类其实是实现继承了一个default func(尽管在类中没有声明)，同时重载了这个方法(overload)。简单来说，override是修改方法的实现，但是overload是修改整个方法(但是方法的名字相同)。
+	
+	\subsection{函数作为输入参数}
+	java不能直接把函数作为输入参数，因为函数不是一个数据类型。一般的方法是，首先定义一个接口(比如叫做func)，所有的函数都继承这个接口中apply方法(即调用这个函数本身)。这样在调用函数时，我们可以先实例化这个函数，得到一个func对象，然后定义一个以func对象为输入参数的函数，这样就可以达到“构造一个以函数为输入参数的函数”的目的了。
 \end{document}
