--- a/note_cs61b/note_cs61b.tex
+++ b/note_cs61b/note_cs61b.tex
@@ -39,4 +39,14 @@
 	
 	\subsection{函数作为输入参数}
 	java不能直接把函数作为输入参数，因为函数不是一个数据类型。一般的方法是，首先定义一个接口(比如叫做func)，所有的函数都继承这个接口中apply方法(即调用这个函数本身)。这样在调用函数时，我们可以先实例化这个函数，得到一个func对象，然后定义一个以func对象为输入参数的函数，这样就可以达到“构造一个以函数为输入参数的函数”的目的了。
+	
+	\subsection{Casting}
+	Casting是java中变换静态类型的一种方法。我们知道，一个赋值操作a=b是否能编译，取决于a的类型A是否是b的类型B的上义词。若B是A的下义词，编译会失败。这时我们可以用a=(A) b的casting方法来临时将后边的表达式的静态类型变为A“，骗过”编译器从而编译成功。不过需要注意的是，即使通过了编译器，运行也可能报错。cast赋值后，对象的静态类型比动态类型小，这时候run-time会报错。比如(Small) new Big(...)，本来表达式new Big(...)的静态类型和动态类型都是上义词Big，但是其静态类型被Casting为Small，这时候静态类型是动态类型的下义词，那么这个表达式虽然可以通过编译，但是在运行时会报错。总而言之，Casting可以任意提高静态类型，但是在降低静态类型时，务必不能低于动态类型的大小，否则会运行报错。
+	
+	{\bfseries 总结}：
+	\begin{itemize}
+		\item 编译时：检查赋值语句，被赋值方的静态类型必须是赋值方静态类型的上义词；检查方法调用语句，静态类型中必须有这个方法。
+		\item 运行时：运行赋值语句时，每个对象的静态类型必须是其动态类型的上义词；运行方法调用语句时，从静态类型中选取最合适的方法调用，但如果这个方法被其动态类型override(只有下义词才能override，这就是为什么动态类型必须是静态类型的下义词)，那么调用动态类型中的方法。
+	\end{itemize}
+	
 \end{document}
