updataed byb 2020/3/1, finished half of the course

--- a/note_cs61b/note_cs61b.tex
+++ b/note_cs61b/note_cs61b.tex
@@ -48,5 +48,8 @@
 		\item 编译时：检查赋值语句，被赋值方的静态类型必须是赋值方静态类型的上义词；检查方法调用语句，静态类型中必须有这个方法。
 		\item 运行时：运行赋值语句时，每个对象的静态类型必须是其动态类型的上义词；运行方法调用语句时，从静态类型中选取最合适的方法调用，但如果这个方法被其动态类型override(只有下义词才能override，这就是为什么动态类型必须是静态类型的下义词)，那么调用动态类型中的方法。
 	\end{itemize}
+	\subsection{泛型}
+	类的定义中可以带上泛型：public class xxx<any>，这里any就是一个泛型，代指某种引用类型。实际实例化时，需要将any用某个引用类型填入。
 	
+	方法的定义中也可以带上泛型，形式为 <any> any xxx()。实际使用时，不需要填入<any>，系统会自动根据对应关系确定any。
 \end{document}
