--- a/note_cs61b/note_cs61b.tex
+++ b/note_cs61b/note_cs61b.tex
@@ -66,5 +66,18 @@
 	
 	对于类本身，也有access的问题。但是private和protected的modifier是无效的，public和默认的package private是可以的。
 	
-
+	\section{数据结构与算法}
+	\subsection{二叉搜索树}
+	二叉树指的就是子节点不超过两个的树结构。而二叉搜索树是指左节点的值小于根，右节点的值大于根的二叉树。显然，如果该二叉搜索树是比较平衡的，那么对于有N个总节点的二叉搜索树，树的深度为log\_2(N+1)，其插入、搜索时间复杂度为log(N)。
+	
+	二叉搜索树需要通过旋转等方法保持平衡。
+	\subsection{B树：2-3树、2-3-4树}
+	先介绍2-3树。2-3树是二叉搜索树的推广，考虑一个节点可以存放两个数据点，树有三个子节点，三个子节点的数据范围分别小于根的第一个数据点、大于第一个数据点但小于第二个数据点、大于第三个数据点。当一个节点存了超过两个数据时，将中间偏左(这个情况下就是第二个)的数据往父节点移动，然后重排子树。
+	
+	这个意义下，二叉树其实就是2-3-4-...-n树在n=2时的特例。对于一个一般的2-3-...-n树，每个节点可以有至多n-1个数据，并且有n个子节点。
+	
+	我们一般称这种树为B-Tree。
+	
+	\subsection{红黑树}
+	红黑树指的是一种将B树等价于一个二叉搜索树的方法。即对储存了超过一个以上数据的节点，将其数据单独分开到不同的节点并用红色线连接。红线连接的其实是在B树里同一个节点，而黑线连接的才是B树中不同节点。用这种方法把B树变成的二叉搜索树，即红黑树，可以保证其深度不超过B树的两倍，这样搜索和插入的速度就会提升。
 \end{document}
