--- a/note_cs61b/note_cs61b.tex
+++ b/note_cs61b/note_cs61b.tex
@@ -80,4 +80,12 @@
 	
 	\subsection{红黑树}
 	红黑树指的是一种将B树等价于一个二叉搜索树的方法。即对储存了超过一个以上数据的节点，将其数据单独分开到不同的节点并用红色线连接。红线连接的其实是在B树里同一个节点，而黑线连接的才是B树中不同节点。用这种方法把B树变成的二叉搜索树，即红黑树，可以保证其深度不超过B树的两倍，这样搜索和插入的速度就会提升。
+	\subsection{哈希表}
+	哈希表是指一个映射，是将任意对象映射到一个整数上的函数。如果适当选择这个函数，可以把输出的整数(哈希码)作为存储对象的index，这样在插入、读取时的时间复杂度就为O(N)。注意两个相同的对象的哈希码必须一样。
+	\subsection{堆和优先队列}
+	优先队列：只能读取、删除最小的元素。优先队列可以用堆实现。
+	
+	堆这里指最小堆，是一种特殊的二叉树结构。与二叉搜索树不同，其结构为：子节点的数值大于或者等于根节点的数值。堆必须是一个完全二叉树。堆的插入：先在完全二叉树的顺序尾端位置插入子节点，然后持续判断这个子节点需不需要“上浮”，即跟父节点交换位置，直到满足最小堆条件。堆读取最小元素：直接读取根节点即可。堆移除最小元素：移除根节点后，用完全二叉树顺序尾端位置的节点顶替根节点，然后持续判断是否需要“下浮”，直到满足最小堆条件。
+	
+	对于完全二叉树，可以采用数组来存储，这也是完全二叉树除了搜索速度外的另一优势。
 \end{document}
