--- a/note_cs61b/note_cs61b.tex
+++ b/note_cs61b/note_cs61b.tex
@@ -67,21 +67,45 @@
 	对于类本身，也有access的问题。但是private和protected的modifier是无效的，public和默认的package private是可以的。
 	
 	\section{数据结构与算法}
-	\subsection{二叉搜索树}
-	二叉树指的就是子节点不超过两个的树结构。而二叉搜索树是指左节点的值小于根，右节点的值大于根的二叉树。显然，如果该二叉搜索树是比较平衡的，那么对于有N个总节点的二叉搜索树，树的深度为log\_2(N+1)，其插入、搜索时间复杂度为log(N)。
+	\subsection{并查集}
+	并查集指的是一种特殊的数据结构：只记录两个数据节点是否相交(相邻)。具有的方法有：判断两个节点是否相交、将两个节点连接。
+	
+	下面介绍几种实现并查集的方法，并分析其复杂度。
+	\subsubsection{集合实现并查集}
+	用自带的集合(set)数据结构来实现并查集。用并集操作实现节点连接功能，复杂度为O(N)；用循环集合查找的方法来判断两个节点是否相交，复杂度为O(N)。
+	\subsubsection{数组实现并查集}
+	首先将节点的数据映射到整数。构造一个数组，数组的index代表code为index的节点，而数组的value代表节点与之相交的节点。
+	
+	判断节点是否相交，只需要判断两个节点对应的数组位置的值是否相同，复杂度为O(1)；连接节点，需要将一方所有的相交集合在数组中的值改变，复杂为O(N)。
+	
+	\subsubsection{树实现并查集}
+	考虑相交的节点都在一个树中。用一个数组表示这多个树(多个相交集合)。index代表节点，value代表树中节点的parent的index。
+	
+	判断是否连接时，需要向上爬树找到root index，然后判断两个节点的root index是否相同，复杂度为O(logN)，前提是树是比较均匀；连接两个节点时，总是用树的深度小的一方连向树的深度大的一方的root处(树的深度信息可以记录在数组root index的位置)。所以复杂度由爬树时的深度决定，为O(logN)。
+	
+	这种实现方式是复杂度最小的，也是最常用的并查集实现方法。
+	\subsection{树}
+	\subsubsection{树的遍历}
+	树可以看成图的特例，分别深度优先遍历和广度优先遍历。深度优先遍历分为前序、中序、后序三种遍历方法，而广度优先遍历可以通过队列实现。
+	
+	由于树具有递归结构，深度优先遍历可以通过递归简单的实现。广度优先遍历实现如下：最开始先让根节点入队，之后一直持续下述步骤：将队列头的节点的children全部入队，打印(或者其他操作)这个队列头节点，然后队列头出队。最后就实现了树的广度优先遍历。
+	\subsubsection{二叉搜索树}
+	二叉树指的就是子节点不超过两个的树结构。而二叉搜索树是指左节点的值小于根，右节点的值大于根的二叉树。显然，如果该二叉搜索树是比较平衡的，那么对于有N个总节点的二叉搜索树，树的深度为log(N+1)，其插入、搜索时间复杂度为log(N)。
 	
 	二叉搜索树需要通过旋转等方法保持平衡。
-	\subsection{B树：2-3树、2-3-4树}
+	\subsubsection{B树：2-3树、2-3-4树}
 	先介绍2-3树。2-3树是二叉搜索树的推广，考虑一个节点可以存放两个数据点，树有三个子节点，三个子节点的数据范围分别小于根的第一个数据点、大于第一个数据点但小于第二个数据点、大于第三个数据点。当一个节点存了超过两个数据时，将中间偏左(这个情况下就是第二个)的数据往父节点移动，然后重排子树。
 	
 	这个意义下，二叉树其实就是2-3-4-...-n树在n=2时的特例。对于一个一般的2-3-...-n树，每个节点可以有至多n-1个数据，并且有n个子节点。
 	
 	我们一般称这种树为B-Tree。
 	
-	\subsection{红黑树}
+	\subsubsection{红黑树}
 	红黑树指的是一种将B树等价于一个二叉搜索树的方法。即对储存了超过一个以上数据的节点，将其数据单独分开到不同的节点并用红色线连接。红线连接的其实是在B树里同一个节点，而黑线连接的才是B树中不同节点。用这种方法把B树变成的二叉搜索树，即红黑树，可以保证其深度不超过B树的两倍，这样搜索和插入的速度就会提升。
 	\subsection{哈希表}
 	哈希表是指一个映射，是将任意对象映射到一个整数上的函数。如果适当选择这个函数，可以把输出的整数(哈希码)作为存储对象的index，这样在插入、读取时的时间复杂度就为O(N)。注意两个相同的对象的哈希码必须一样。
+	
+	如果要将对象映射到某个整数范围之内，可以用自带的hashcode方法取余数实现。注意所有对象都自带hashCode()和equals()方法，hashCode()根据对象的地址进行映射，equals判断对象的地址是否相同。如果重写了equals()方法，请务必重写hasCode()方法(反之亦然)，否则两个equals的对象具有不同的code，会查找出错。
 	\subsection{堆和优先队列}
 	优先队列：只能读取、删除最小的元素。优先队列可以用堆实现。
 	
