--- a/note_cs61b/note_cs61b.tex
+++ b/note_cs61b/note_cs61b.tex
@@ -112,4 +112,24 @@
 	堆这里指最小堆，是一种特殊的二叉树结构。与二叉搜索树不同，其结构为：子节点的数值大于或者等于根节点的数值。堆必须是一个完全二叉树。堆的插入：先在完全二叉树的顺序尾端位置插入子节点，然后持续判断这个子节点需不需要“上浮”，即跟父节点交换位置，直到满足最小堆条件。堆读取最小元素：直接读取根节点即可。堆移除最小元素：移除根节点后，用完全二叉树顺序尾端位置的节点顶替根节点，然后持续判断是否需要“下浮”，直到满足最小堆条件。
 	
 	对于完全二叉树，可以采用数组来存储，这也是完全二叉树除了搜索速度外的另一优势。
+	\subsection{图}
+	图是由节点(称为顶点)和边组成的数据结构。图需要解决的问题有：两个顶点是否连接，以什么样的路径连接？
+	
+	图和树有些类似，但是不同的是，图可以形成闭环路径，所以树的一些遍历方法直接用在图中会导致死循环。为了防止重复访问已访问的顶点导致死循环，我们给图一个数组marked[]，已访问的顶点设为True，不再访问True的节点。另外为了记录路径，再赋予图一个edgeTo[]数组，edgeTo[i] = j代表从j到i这样一个行动路径。
+	\subsubsection{广度优先遍历}
+	图的广度优先遍历与树的优先遍历类似：有一个队列，队列头的节点v出队，然后将出队节点的相邻且未被marked的节点n入队，并mark这些相邻节点n，最后设edgeTo[n]=v。循环直到队列为空。
+	\subsubsection{深度优先遍历：递归实现}
+	与树的深度优先遍历类似，但是注意要mark已经访问的节点。对于需要深度遍历的顶点，先mark这个节点，然后依次深度遍历与它相邻且未被marked的节点。
+	\subsubsection{深度优先遍历：循环实现}
+	读者可能可以想到，利用队列进出两头的特性，即先入队的才先出队的特点，可以实现广度优先遍历(先把相邻节点全部入队，这样总能保证在访问下一层之前把这一层的节点全部访问完)。相反，为了实现深度优先遍历，就必须利用到栈的先进先出的特性：这样保证了在访问同一层节点之前，可以把后进栈的深层节点访问完。
+	
+	具体实现如下：最开始出发节点入栈。然后循环：将栈顶节点弹栈，访问弹栈节点并mark，然后将该节点的所有相邻且没有mark的节点入栈，持续这个过程直到栈空为止。
+	\subsubsection{图的实现}
+	上面讲了这么多，那么图应该用什么样的数据结构实现呢？邻接矩阵(M[i,j]表示i是否连接到j)是一种常用的方法。但是对于一个稀疏的图，邻接矩阵是个稀疏矩阵，浪费了大量的存储空间和搜索时间。更常用的方法还是邻接列表，即list[i]指向一串链表，表示与i顶点相邻的所有顶点的指标。
+	
+	判断两个节点(比如i是否连接到j)是否相邻：需要在list[i]中查找是否有j，时间复杂度取决于i的度(有多少连接节点)。连接两个节点i到j，将j放到list[i]的链表头，复杂度为O(1)；打印整个图的连接关系，复杂度为O(V+E)，V为总顶点数，E为总边数。
+	\subsubsection{拓扑排序}
+	拓扑排序：将有向图的前后顺序看成是一种先后条件，拓扑排序将有向图整理成一个线性结构并输出。
+	
+	方法：用深度优先搜索，记录搜索顺序，遍历整个图。最后将搜索顺序倒置即得到拓扑排序。
 \end{document}
